fixed spacing error

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ h2 {
   font-family: "Sigmar One", cursive;
   color: #b20953;
   font-size: 1.875rem;
+  margin: 0;
 }
 
 header {
@@ -40,13 +41,21 @@ body {
   text-align: center;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.nav {
+  text-align: center;
+}
+
 .nav li {
   display: inline-block;
-  margin-top: 1rem;
 }
 
 .nav a {
-  padding: 10px;
+  padding: .2em .5em .3em;
   background-color: #b2a212;
   color: #fff;
   text-decoration: none;
@@ -67,11 +76,11 @@ div {
   background-color: #fff;
   padding: 10px;
   margin: .3em;
-  color: #2f2d13;
 }
 
 p {
   font-size: 1.125rem;
+    color: #2f2d13;
 }
 
 .copy {
